--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -1,5 +1,11 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "debian/buster64"
+  config.vm.define "db" do |db|
+    db.vm.box = "debian/buster64"
+    db.vm.network "private_network", ip: "192.168.33.10"
+  end
 
-  config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.define "web" do |web|
+    web.vm.box = "debian/buster64"
+    web.vm.network "private_network", ip: "192.168.33.11"
+  end
 end
