--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -1,11 +1,19 @@
 Vagrant.configure("2") do |config|
   config.vm.define "db" do |db|
-    db.vm.box = "debian/buster64"
+    db.vm.box = "debian/stretch64"
+    db.vm.hostname = "db"
     db.vm.network "private_network", ip: "192.168.33.10"
+     #db.vm.provision "ansible" do |ansible|
+     # ansible.playbook = "ansible/db.yml"
+    #end
   end
 
   config.vm.define "web" do |web|
-    web.vm.box = "debian/buster64"
+    web.vm.box = "debian/stretch64"
+    web.vm.hostname = "web"
     web.vm.network "private_network", ip: "192.168.33.11"
+    web.vm.provision "ansible" do |ansible|
+      ansible.playbook = "ansible/web.yml"
+    end
   end
 end
