--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -3,9 +3,9 @@ Vagrant.configure("2") do |config|
     db.vm.box = "debian/stretch64"
     db.vm.hostname = "db"
     db.vm.network "private_network", ip: "192.168.33.10"
-     #db.vm.provision "ansible" do |ansible|
-     # ansible.playbook = "ansible/db.yml"
-    #end
+     db.vm.provision "ansible" do |ansible|
+      ansible.playbook = "ansible/db.yml"
+    end
   end
 
   config.vm.define "web" do |web|
@@ -15,5 +15,14 @@ Vagrant.configure("2") do |config|
     web.vm.provision "ansible" do |ansible|
       ansible.playbook = "ansible/web.yml"
     end
+  end
+
+  config.vm.define "ci" do |ci|
+    ci.vm.box = "debian/stretch64"
+    ci.vm.network "private_network", ip: "192.168.50.12"
+    ci.vm.hostname = "jenkins"
+	ci.vm.provision "ansible" do |ansible|
+		ansible.playbook = "ansible/ci.yml"
+	end
   end
 end
