Added git in CI provisioning.

--- a/infra/ansible/ci.yml
+++ b/infra/ansible/ci.yml
@@ -23,6 +23,10 @@
       become: 'yes'
       apt:
         name: jenkins
+    - name: Install git
+      become: 'yes'
+      apt:
+        name: git
     - name: Copy web SSH private key
       become: 'yes'
       copy:
