--- a/infra/ansible/db.yml
+++ b/infra/ansible/db.yml
@@ -1,5 +1,13 @@
 - hosts: all
   tasks:
+    - name: Permit SSH connections from new key pair
+      become: yes
+      blockinfile:
+        marker: ""
+        marker_begin: ""
+        marker_end: ""
+        block: "{{ lookup('file', '../ssh-keys/devops.pub') }}"
+        dest: /home/vagrant/.ssh/authorized_keys
     - name: Update apt
       become: 'yes'
       apt:
