--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -17,20 +17,20 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  config.vm.define "web02" do |web|
-    web.vm.box = "debian/stretch64"
-    web.vm.hostname = "web02"
-    web.vm.network "private_network", ip: "192.168.33.12"
-    web.vm.provision "ansible" do |ansible|
+  config.vm.define "web02" do |web02|
+    web02.vm.box = "debian/stretch64"
+    web02.vm.hostname = "web02"
+    web02.vm.network "private_network", ip: "192.168.33.12"
+    web02.vm.provision "ansible" do |ansible|
       ansible.playbook = "ansible/web.yml"
     end
   end
 
   config.vm.define "lb" do |lb|
-    web.vm.box = "debian/stretch64"
-    web.vm.hostname = "nginx"
-    web.vm.network "private_network", ip: "192.168.33.20"
-    web.vm.provision "ansible" do |ansible|
+    lb.vm.box = "debian/stretch64"
+    lb.vm.hostname = "nginx"
+    lb.vm.network "private_network", ip: "192.168.33.20"
+    lb.vm.provision "ansible" do |ansible|
       ansible.playbook = "ansible/lb.yml"
     end
   end
